fix padding header

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,7 @@
 .home {
   font-family: Arial, sans-serif;
   text-align: center;
-  padding: 2rem;
+  padding: 0 2rem 2rem 2rem;
 }
 
 .home-header {
