--- a/src/components/Benefits/Benefits.css
+++ b/src/components/Benefits/Benefits.css
@@ -2,7 +2,6 @@
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     max-width: 1200px;
-    height: 60vh; 
     margin: 0 auto;    
 }
 
@@ -26,12 +25,14 @@
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
 }
 
 .benefits-item{
     display: flex;
     flex-direction: column;
-    text-align: left;
+    align-items: center;
+    padding: 1rem 0;
 }
 .benefits-item img{
     width: 60px;
@@ -59,6 +60,8 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin: 5rem auto 0 auto;
+    max-width: 350px;
 }
 .benefits-cta-text{
     background-color: black;
@@ -73,6 +76,7 @@
 @media only screen and (min-width: 1024px  ) {
     .benefits-container {
         display: grid;
+        height: 60vh;
         grid-template-columns: repeat(2, 1fr);
     }
     
@@ -80,4 +84,22 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .benefits-cta-container{
+        margin: 1rem 0 0 0;
+    }
+}
+
+@media only screen and (min-width: 640px ) {
+    .benefits-items {
+        justify-items: start;
+    }
+    .benefits-item {
+        flex-direction: column;
+        text-align: left;
+        align-items: start;
+        padding: 0;
+    }
+
+    
 }
