--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -48,7 +48,7 @@
   border-top: 0.1rem solid black;
   padding: 2rem 0;
   display: flex;
-  flex-direction: column;
+ flex-direction: column;
   gap: 2rem;
 }
 
@@ -70,5 +70,6 @@
 
   .footer-info {
     justify-content: flex-end;
+    flex-direction: row;
   }
 }
